fixed album title share menu overlap

--- a/css/p/section.albums.styl
+++ b/css/p/section.albums.styl
@@ -85,6 +85,7 @@
                     text-shadow b40 0 -1px 0
                     border 1px solid b15
                     box-shadow b45 1px 1px 2px
-                menu
-                  label
-                    font bold 12px/1.25 sans
+                .menu.share
+                  ul
+                    left auto
+                    right -49%
